--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,16 @@
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.exercise.ExerciseDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.routines.create.RoutineCreateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.routines.create.RoutineSelectExerciseActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
